--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Markussim/marksism.space-voice#readme",
   "dependencies": {
+    "@types/ejs": "^3.0.4",
     "@types/express": "^4.17.8",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
