--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/ejs": "^3.0.4",
     "@types/express": "^4.17.8",
+    "@types/mongoose": "^5.7.36",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "mongoose": "^5.10.8",
