--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^4.17.8",
     "@types/mongoose": "^5.7.36",
     "ejs": "^3.1.5",
+    "escape-html": "^1.0.3",
     "express": "^4.17.1",
     "mongoose": "^5.10.8",
     "ts-node": "^9.0.0",
